# pq-composite-sig

./: Cargo.toml  README.md
docs/: draft-conformance-discrepancies.md
src/: aliases.rs  combiner.rs  consts.rs  error.rs  expander.md  expander.rs  lib.rs  mldsa44_ed25519.rs  mldsa65_ed25519.rs  mldsa87_ed448.rs  xwing_sig_44.rs  xwing_sig_65.rs  xwing_sig_87.rs
tests/: mldsa87_ed448_tests.rs  test_vectors_mldsa44_ed25519.rs  test_vectors_mldsa65_ed25519.rs  xwing_sig_tests.rs
