[package]
name = "xwing-sig"
version = "0.1.0"
edition = "2021"

[dependencies]
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux", package = "libcrux-ml-dsa", branch = "main" }
ed25519-dalek = "2.0"
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2.0"

[dev-dependencies]
rand_chacha = "0.3"
